syntax = "proto3";

package rustle_tree;

message UploadRequest {
  repeated bytes files = 1;
}

message UploadResponse {
  bytes merkle_root_hash = 1;
}

message DownloadRequest {
  int64 file_index = 1;
}

message DownloadResponse {
  bytes file_content = 1;
}

message MerkleProofRequest {
  int64 file_index = 1;
}

message TreeNode {
    string hash = 1;
    int64 left_idx = 2;
    int64 right_idx = 3;
    TreeNode left = 4;
    TreeNode right = 5;
}

message MerkleProofResponse {
  repeated TreeNode proofs = 1;
}


service MerkleTree {
  rpc Upload(UploadRequest) returns (UploadResponse);
  rpc Download(DownloadRequest) returns (DownloadResponse);
  rpc GetMerkleProof(MerkleProofRequest) returns (MerkleProofResponse);
}
